--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [],
   "author": "",
   "license": "WORKETYAMO",
-  "description": "",
+  "description": "## Vue d'ensemble",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@types/compression": "^1.7.5",
@@ -34,14 +34,26 @@
     "typescript-eslint": "^7.13.1"
   },
   "dependencies": {
+    "@prisma/client": "5.16.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/chalk": "^2.2.0",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.15",
+    "@types/otp-generator": "^4.0.2",
+    "@types/validator": "^13.12.0",
+    "bcrypt": "^5.1.1",
+    "chalk": "^5.3.0",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
+    "otp-generator": "^4.0.1",
+    "prisma": "^5.16.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.12.0"
   }
 }
