--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@prisma/client": "5.16.1",
     "@types/bcrypt": "^5.0.2",
     "@types/chalk": "^2.2.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
@@ -48,6 +49,7 @@
     "env-var": "^7.5.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
     "otp-generator": "^4.0.1",
